create route (/api/user/answer) and (/api/user/scores)
